--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<div id="preloader">
 		<div id="status">
-			<img src="images/loader.gif" id="preloader_image" alt="loader">
+			<img src="images/load.gif" id="preloader_image" alt="loader">
 		</div>
 	</div>
 	<!-- ck fullpage wrapper Start -->
