--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 
 <body class="demo-3">
     	
-	<!-- preloader Start -->
+	<!-- preloader Start
 
 	<div id="preloader">
 		<div id="status">
 			<img src="images/load.gif" id="preloader_image" alt="loader">
 		</div>
 	</div>
+ -->
 	<!-- ck fullpage wrapper Start -->
 	<!-- ck background img wrapper Start -->
 	<div class="wrapper-background"></div>
