--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<h3 class="animate" data-animate="fadeInUp">Satisfy your taste buds!</h3>
 							<p class="animate" data-animate="fadeInUp">Relaxation is compulsory not only for eye, brain, heart. Even your taste buds in tongue also needs it. We are ready to give that with our fascinating and tasty HOT & COOL . . . </p>
 							<ul class="animate" data-animate="fadeInUp">
-								<li><a href="tel:917339253210">Call Us</a>
+								<li><a href="tel:+917339253210">Call Us</a>
 								</li>
 								<li><a href="//api.whatsapp.com/send?phone=917339253210&text=Hi, Cuppie Puppie">Whatsapp Us</a>
 								</li>
