--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="ck_slider_top_content float_left">
 							<h3><img src="images/awe.png" alt="img" class="animate" data-animate="fadeInUp"></h3>
 							<h3 class="animate" data-animate="fadeInUp">Satisfaction & Relaxation!!</h3>
-							<p class="animate" data-animate="fadeInUp">“The best time for ice cream is always”. Obviously! One of the most delicious dessert treat is ice cream. Our flavours and sweeteners will give a delightful relaxation for your taste buds. We the young and elegant CUPPIE PUPPY team is here to give you HOT & COLD worthy your time, expectations and money.</p>
+							<p class="animate" data-animate="fadeInUp">“The best time for ice cream is always”. Obviously! One of the most delicious dessert treat is ice cream. Our flavours and sweeteners will give a delightful relaxation for your taste buds. We the young and elegant CUPPIE PUPPIE team is here to give you HOT & COLD worthy your time, expectations and money.</p>
 							<ul class="animate" data-animate="fadeInUp">
 								<li><a href="tel:+917339253210">Call Us</a>
 								</li>
