--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 			</div>
 		</div>
 		
-		<div class="ck_team_main_wrapper section animated-row float_left" data-section="section6">
+<!-- 		<div class="ck_team_main_wrapper section animated-row float_left" data-section="section6">
 			<div class="fp-bg" style="background-image:url(images/header_bg7.jpg)"></div>
 			<div class="container">
 				<div class="row">
@@ -403,9 +403,9 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<div class="ck_blog_main_wrapper section animated-row float_left" data-section="section8">
+<!-- 		<div class="ck_blog_main_wrapper section animated-row float_left" data-section="section8">
 			<div class="fp-bg" style="background-image:url(images/header_bg9.jpg)"></div>
 			<div class="container">
 				<div class="row">
@@ -505,7 +505,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="ck_contact_main_wrapper section animated-row float_left" data-section="section10">
 			<div class="fp-bg" style="background-image:url(images/header_bg2.jpg)"></div>
